# ezwow

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_debug_inject.sh  build_run_inject.sh  gdb_wow .sh  inject_debug_via_ldpreload.sh  inject_via_ldpreload.sh
src/: Controller.h  DebugConsole.h  Esp.h  Hooks.h  ImGuiOglFrame.h  MainMenu.h  Offsets.h_OLD  PathRecorder.h  PathWalker.h  Radar.h  Utils.h  WindowUtils.h  imgui_impl_opengl2.cpp  main.cpp
src/wow/: Offsets.h  WOWCamera.h  WOWClient.h  WOWFunctions.h  WOWObject.h  WOWObjectManager.h  WOWPlayer.h  WOWUnit.h
